--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -8,98 +8,9 @@
       src="https://kit.fontawesome.com/2d275883fd.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/jpg" href="University-of-Cebu-Logo.jpg" />
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/feedback.css">
   </head>
-
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", sans-serif;
-      box-sizing: border-box;
-      outline: none;
-    }
-
-    body {
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-      color: rgb(255, 251, 251);
-      background-image: url(uclm-.jpg);
-      background-position: center;
-      background-size: cover;
-    }
-
-    .container {
-      width: 360px;
-      background-color: #1965c2;
-      box-shadow: 0 0 20px rgb(161, 156, 156);
-
-      border-radius: 10px;
-    }
-
-    i {
-      color: rgb(117, 103, 103);
-    }
-
-    .container form {
-      width: 100%;
-      text-align: center;
-      padding: 25px 20px;
-    }
-
-    form h1 {
-      padding: 10px 0;
-    }
-
-    form .id {
-      position: relative;
-    }
-
-    .id i {
-      position: absolute;
-      font-size: 20px;
-      top: 50%;
-      right: 20px;
-      transform: translateY(-50%);
-    }
-
-    form input {
-      width: 100%;
-      height: 50px;
-      margin: 4px 0;
-      border: 1px solid rgb(97, 92, 92);
-      border-radius: 5px;
-      font-size: 15px;
-      padding: 0 15px;
-      padding-right: 45px;
-    }
-
-    form textarea {
-      padding: 5px 15px;
-      border: 1px solid rgb(110, 106, 106);
-      border-radius: 5px;
-      font-size: 15px;
-      width: 100%;
-      margin: 4px 0;
-    }
-
-    form button {
-      margin-top: 5px;
-      border: none;
-      background: rgb(105, 147, 238);
-      color: rgb(216, 220, 231);
-      padding: 10px 0;
-      width: 100%;
-      font-size: 20px;
-      font-weight: 800;
-      cursor: pointer;
-      border-radius: 3px;
-    }
-  </style>
   <body>
     <div class="nav-container">
       <nav class="fixed-width">
