--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -19,8 +19,8 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/pages/profile/profile.html">Profile</a></li>
           <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
-          <li><a href="/pages/register/RegistrationForm_partial.html">Register</a></li>
-          <li><a href="/pages/login/LOGIN.html">Login</a></li>
+          <li><a href="/pages/register/register.html">Register</a></li>
+          <li><a href="/pages/login/login.html">Login</a></li>
         </ul>
       </nav>
     </div>
