--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -17,7 +17,7 @@
           <li><a href="/pages/profile/profile.html">Profile</a></li>
           <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
           <li><a href="/pages/register/RegistrationForm_partial.html">Register</a></li>
-          <li><a href="/pages/login/LOGIN.html">Login</a></li>
+          <li><a href="/pages/login/login.html">Login</a></li>
         </ul>
       </nav>
     </div>
