--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feedback form</title>
+    <title>Feedback</title>
     <script
       src="https://kit.fontawesome.com/2d275883fd.js"
       crossorigin="anonymous"
