--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/navbar.css">
   </head>
