--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/register.css" />
+    <title>Register</title>
   </head>
   <body>
     <div class="nav-container">
