--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -22,11 +22,14 @@
           <li><a href="/pages/profile/profile.html">Profile</a></li>
           <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
           <li>
-            <a href="/pages/register/RegistrationForm_partial.html">Register</a>
+            <a href="/pages/register/register.html">Register</a>
           </li>
           <li><a href="/pages/login/login.html">Login</a></li>
         </ul>
       </nav>
+    </div>
+    <div class="fixed-width title">
+      <h1>Meet the People Behind the Scenes!</h1>
     </div>
     <div class="people">
       <div class="box">
