--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -31,21 +31,22 @@
     </div>
     <div class="container">
       <form>
-        <h1>Feedback</h1>
-        <div class="id">
-          <input type="text" placeholder=" Your Full Name and ID Number" />
-          <i class="far fa-user"></i>
-        </div>
-        <div class="id">
-          <input type="text" placeholder=" Your Email Address" />
-          <i class="far fa-envelope"></i>
-        </div>
-        <textarea
-          cols="15"
-          rows="5"
-          placeholder="Please state your opinions here . . . "
-        ></textarea>
-        <button>Send</button>
+          <h1>Feedback</h1>
+          <div class="id">
+              <input placeholder="Enter text here" class="input-style" type="text">
+              <i class="far fa-user"></i>
+          </div>
+          <div class="id">
+              <input placeholder="Enter text here" class="input-style" type="text">
+              <i class="far fa-envelope"></i>
+          </div>
+          <div>
+              <div class="id">
+                  <textarea cols="15" rows="5" placeholder="Please state your opinions here . . . " class="input-style"
+                      type="text"></textarea></textarea>
+              </div>
+          </div>
+          <button class="button">Send</button>
       </form>
     </div>
     <footer>
