--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to University of Cebu</title>
+    <title>Tesseract | 3D and Simulation Service</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="apple-touch-icon"
