--- a/pages/feedback/display.html
+++ b/pages/feedback/display.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feedback</title>
-</head>
-<body>
-  <section id="posts">
-  </section>
-  <script src="../../js/display.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <link rel="stylesheet" href="../../css/footer.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../../favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../../favicon-16x16.png"
+    />
+    <link rel="manifest" href="../../site.webmanifest" />
+    <title>Feedback Posts</title>
+  </head>
+  <body>
+    <div class="nav-container">
+      <nav class="fixed-width">
+        <a href="../../index.html"><img src="../../img/logo.png" alt="" /></a>
+        <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../pages/profile/profile.html">Profile</a></li>
+          <li><a href="../../pages/feedback/feedback.html">Feedback</a></li>
+          <li>
+            <a href="../../pages/register/register.html">Register</a>
+          </li>
+          <li><a href="../../pages/login/login.html">Login</a></li>
+        </ul>
+      </nav>
+    </div>
+    <section id="posts"></section>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Alegre, Princess Abegeal (2023)</p>
+      </div>
+    </footer>
+    <script src="../../js/display.js"></script>
+  </body>
 </html>
