--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -19,6 +19,7 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="../../pages/profile/profile.html">Profile</a></li>
           <li><a href="../../pages/feedback/feedback.html">Feedback</a></li>
+          <li><a href="../../pages/feedback/display.html">Posts</a></li>
           <li><a href="../../pages/register/register.html">Register</a></li>
           <li><a href="../../pages/login/login.html">Login</a></li>
         </ul>
