--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -21,6 +21,7 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="../../pages/profile/profile.html">Profile</a></li>
           <li><a href="../../pages/feedback/feedback.html">Feedback</a></li>
+          <li><a href="../../pages/feedback/display.html">Posts</a></li>
           <li>
             <a href="../../pages/register/register.html">Register</a>
           </li>
